force-app/main/default/objects/Session_Data__c/Session_Data__c.object-meta.xml
<CustomObject>
    <description>Session_Data</description>
    <label>Session Data</label>
    <nameField>
        <displayFormat>session-{YYYY}{MM}{DD}-{0000000000}</displayFormat>
        <label>session Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Session Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>