force-app/main/default/objects/Session_Data__c/fields/CLASSTYPE__c.field-meta.xml
<CustomField>
    <fullName>CLASSTYPE__c</fullName>
    <label>Class Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>