force-app/main/default/objects/Session_Data__c/fields/data__c.field-meta.xml
<CustomField>
    <fullName>data__c</fullName>
    <label>data</label>
    <length>70000</length>
    <type>LongTextArea</type>
</CustomField>