force-app/main/default/objects/Session_Data__c/fields/data_name__c.field-meta.xml
<CustomField>
    <fullName>data_name__c</fullName>
    <label>data_name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>