force-app/main/default/objects/Session_Data__c/fields/data_request__c.field-meta.xml
<CustomField>
    <fullName>data_request__c</fullName>
    <label>data_request</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>