force-app/main/default/objects/Session_Data__c/fields/data_tittle__c.field-meta.xml
<CustomField>
    <fullName>data_tittle__c</fullName>
    <label>data_tittle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>