force-app/main/default/objects/Session_Data__c/fields/page_name__c.field-meta.xml
<CustomField>
    <fullName>page_name__c</fullName>
    <label>page_name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>