force-app/main/default/objects/Session_Data__c/fields/Page_No__c.field-meta.xml
<CustomField>
    <fullName>Page_No__c</fullName>
    <label>Page No</label>
    <length>3</length>
    <type>Text</type>
</CustomField>