force-app/main/default/objects/Session_Data__c/fields/RefNo__c.field-meta.xml
<CustomField>
    <fullName>RefNo__c</fullName>
    <label>Ref No</label>
    <length>50</length>
    <type>Text</type>
</CustomField>