force-app/main/default/objects/Session_Data__c/fields/sequenceNo__c.field-meta.xml
<CustomField>
    <fullName>sequenceNo__c</fullName>
    <label>Sequence No</label>
    <length>3</length>
    <type>Text</type>
</CustomField>