force-app/main/default/objects/Session_Data__c/fields/session_id__c.field-meta.xml
<CustomField>
    <fullName>session_id__c</fullName>
    <description>session_id : 
objectID-userid-yyymmdd-generatenumber
contactID-userid-yyymmdd-generatenumber</description>
    <label>session_id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>