force-app/main/default/objects/Session_Data__c/fields/signature_data__c.field-meta.xml
<CustomField>
    <fullName>signature_data__c</fullName>
    <label>signature_data</label>
    <length>100</length>
    <type>Text</type>
</CustomField>