force-app/main/default/objects/Session_Data__c/listViews/All_Before_Today.listView-meta.xml
<ListView>
    <fullName>All_Before_Today</fullName>
    <columns>NAME</columns>
    <columns>Entity__c</columns>
    <columns>CLASSTYPE__c</columns>
    <columns>Operation__c</columns>
    <columns>Service__c</columns>
    <columns>sequenceNo__c</columns>
    <columns>Order__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <label>All Before Today</label>
    <language>en_US</language>
</ListView>