force-app/main/default/objects/Session_Data__c/listViews/All_sendCommunicationMessage.listView-meta.xml
<ListView>
    <fullName>All_sendCommunicationMessage</fullName>
    <columns>NAME</columns>
    <columns>signature_data__c</columns>
    <columns>Entity__c</columns>
    <columns>CLASSTYPE__c</columns>
    <columns>Operation__c</columns>
    <columns>Service__c</columns>
    <columns>sequenceNo__c</columns>
    <columns>Order__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Service__c</field>
        <operation>equals</operation>
        <value>sendCommunicationMessage</value>
    </filters>
    <label>All - sendCommunicationMessage</label>
    <language>en_US</language>
</ListView>